@@ -1,3 +1,3 @@
 #!/bin/sh
 
-graalvm/bin/java -Dgraal.LogFile=logs/graal.log -Dfile.encoding=UTF-8 -jar netuno.jar $@
+graalvm/bin/java --enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow -Djdk.graal.LogFile=logs/graal.log -Dfile.encoding=UTF-8 -jar netuno.jar $@
